@@ -2,11 +2,12 @@ gcc-defaults (1.108) UNRELEASED; urgency=low
 
   [ Matthias Klose ]
   * debian/rules: Remove duplicate code.
+  * Fix libgcj.pc symlink for multiarch builds.
   
   [ Aurelien Jarno ]
   * Add support for s390x.
 
- -- Matthias Klose <doko@debian.org>  Fri, 15 Jul 2011 11:31:48 +0200
+ -- Matthias Klose <doko@debian.org>  Wed, 24 Aug 2011 12:23:39 +0200
 
 gcc-defaults (1.107) unstable; urgency=low
 
